; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-ether.c_ether_if_print.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-ether.c_ether_if_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcap_pkthdr = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ether_if_print(i32* %0, %struct.pcap_pkthdr* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.pcap_pkthdr*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.pcap_pkthdr* %1, %struct.pcap_pkthdr** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = load %struct.pcap_pkthdr*, %struct.pcap_pkthdr** %5, align 8
  %10 = getelementptr inbounds %struct.pcap_pkthdr, %struct.pcap_pkthdr* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.pcap_pkthdr*, %struct.pcap_pkthdr** %5, align 8
  %13 = getelementptr inbounds %struct.pcap_pkthdr, %struct.pcap_pkthdr* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @ether_print(i32* %7, i32* %8, i32 %11, i32 %14, i32* null, i32* null)
  ret i32 %15
}

declare dso_local i32 @ether_print(i32*, i32*, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
